# edge-ai-suites

./: .gitmodules  README.md
.github/: CODEOWNERS
education-ai-suite/: .gitignore
metro-ai-suite/live-video-analysis/live-video-alert-agent/: .dockerignore  Makefile  README.md  docker-compose.yml  pyproject.toml
metro-ai-suite/live-video-analysis/live-video-alert-agent/chart/: Chart.yaml  user_values_override.yaml  values.yaml
metro-ai-suite/live-video-analysis/live-video-alert-agent/chart/subchart/alert-agent-service/: Chart.yaml  values.yaml
metro-ai-suite/live-video-analysis/live-video-alert-agent/chart/subchart/app/: values.yaml
metro-ai-suite/live-video-analysis/live-video-alert-agent/chart/templates/: serviceaccounts.yaml
metro-ai-suite/live-video-analysis/live-video-alert-agent/docker/: Dockerfile  docker-compose.npu.yml  docker-compose.yml
metro-ai-suite/live-video-analysis/live-video-alert-agent/docs/user-guide/: api-reference.md  get-started.md  how-it-works.md  index.md  known-issues.md  release-notes.md
metro-ai-suite/live-video-analysis/live-video-alert-agent/resources/: config.yaml
metro-ai-suite/live-video-analysis/live-video-alert-agent/scripts/: init_ovms.sh
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/: config.py  main.py
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/agentic/: __init__.py
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/core/: agent_manager.py  alert_service_client.py
metro-ai-suite/live-video-analysis/live-video-alert-agent/src/ui/: index.html
(+576 files in other folders)
